--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Dustin M. Eastway",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.11.6",
     "nodemon": "^2.0.14",
     "typescript": "^4.4.4"
@@ -17,7 +18,11 @@
     "@mikro-orm/core": "^4.5.9",
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
-    "pg": "^8.7.1"
+    "apollo-server-express": "^3.5.0",
+    "express": "^4.17.1",
+    "graphql": "^15.7.2",
+    "pg": "^8.7.1",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "configPaths": [
