--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Fullstack tutorial",
   "scripts": {
-    "create-migration": "npx mikro-orm migration:create -p src/migrations",
+    "create:migration": "npx mikro-orm migration:create -p src/migrations",
     "start": "tsc -w & nodemon dist/index.js"
   },
   "author": "Dustin M. Eastway",
@@ -19,6 +19,7 @@
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
     "apollo-server-express": "^3.5.0",
+    "argon2": "^0.28.2",
     "express": "^4.17.1",
     "graphql": "^15.7.2",
     "pg": "^8.7.1",
