--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.7.2",
+    "ioredis": "^4.28.5",
+    "nodemailer": "^6.7.1",
     "pg": "^8.7.1",
-    "redis": "^3.1.2",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/connect-redis": "^0.0.17",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.11.6",
-    "@types/redis": "^2.8.32",
+    "@types/nodemailer": "^6.4.4",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.14",
     "typescript": "^4.4.4"
   },
