--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "0.0.0",
   "description": "Fullstack tutorial",
   "scripts": {
-    "create:migration": "npx mikro-orm migration:create -p src/migrations",
     "start": "tsc -w & nodemon dist/index.js"
   },
   "author": "Dustin M. Eastway",
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.9",
-    "@mikro-orm/core": "^4.5.9",
-    "@mikro-orm/migrations": "^4.5.9",
-    "@mikro-orm/postgresql": "^4.5.9",
     "apollo-server-express": "^3.5.0",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
@@ -23,6 +18,7 @@
     "nodemailer": "^6.7.1",
     "pg": "^8.7.1",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -34,10 +30,5 @@
     "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.14",
     "typescript": "^4.4.4"
-  },
-  "mikro-orm": {
-    "configPaths": [
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
