--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
     "cors": "^2.8.5",
+    "dataloader": "^2.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.7.2",
