--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Fullstack tutorial",
   "scripts": {
-    "start": "tsc -w & nodemon dist/index.js"
+    "start": "tsc -w & nodemon dist/index.js --watch dist/index.js"
   },
   "author": "Dustin M. Eastway",
   "dependencies": {
